--- a/fixtures/vcr_cassettes/pubmed_harvester_spec_find_by_pmid_through_sw.yml
+++ b/fixtures/vcr_cassettes/pubmed_harvester_spec_find_by_pmid_through_sw.yml
@@ -156,4 +156,160 @@ http_interactions:
         STATES</CopyrightCountry>\r\n  </PublicationItem>\r\n</ArrayOfPublicationItem>"
     http_version: 
   recorded_at: Mon, 27 Apr 2015 21:32:49 GMT
+- request:
+    method: post
+    uri: https://stg.sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery?format=xml
+    body:
+      encoding: US-ASCII
+      string: ! "<?xml version=\"1.0\"?>\n      <ScienceWireQueryXMLParameter xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\"
+        xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\">\n      <xmlQuery>&lt;query
+        xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\" xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"&gt;\n\t
+        \           &lt;Criterion ConjunctionOperator=\"AND\"&gt;\n\t              &lt;Criteria&gt;\n\t
+        \               &lt;Criterion&gt;\n\t                  &lt;Filter&gt;\n\t
+        \                   &lt;Column&gt;PMID&lt;/Column&gt;\n\t                    &lt;Operator&gt;In&lt;/Operator&gt;\n\t
+        \                   &lt;Values&gt;&lt;Value&gt;10487815&lt;/Value&gt;&lt;/Values&gt;\n\t
+        \                 &lt;/Filter&gt;\n\t                &lt;/Criterion&gt;\n\t
+        \             &lt;/Criteria&gt;\n\t            &lt;/Criterion&gt;\n\t            &lt;Columns&gt;\n\t
+        \             &lt;SortColumn&gt;\n\t                &lt;Column&gt;Rank&lt;/Column&gt;\n\t
+        \               &lt;Direction&gt;Descending&lt;/Direction&gt;\n\t              &lt;/SortColumn&gt;\n\t
+        \           &lt;/Columns&gt;\n\t            &lt;MaximumRows&gt;1000&lt;/MaximumRows&gt;\n\t
+        \         &lt;/query&gt;</xmlQuery>\n      </ScienceWireQueryXMLParameter>"
+    headers:
+      Accept:
+      - ! '*/*'
+      User-Agent:
+      - Ruby
+      Licenseid:
+      - ***REMOVED***
+      Host:
+      - stg.sciencewirerest.discoverylogic.com
+      Connection:
+      - Keep-Alive
+      Expect:
+      - 100-continue
+      Content-Type:
+      - text/xml
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Cache-Control:
+      - private
+      Content-Type:
+      - application/xml; charset=utf-8
+      Server:
+      - Microsoft-IIS/7.5
+      X-Aspnetmvc-Version:
+      - '2.0'
+      X-Aspnet-Version:
+      - 4.0.30319
+      X-Powered-By:
+      - ASP.NET
+      Date:
+      - Tue, 12 May 2015 23:29:04 GMT
+      Content-Length:
+      - '277'
+    body:
+      encoding: US-ASCII
+      string: ! "<?xml version=\"1.0\"?>\r\n<ScienceWireQueryIDResponse xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"
+        xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\r\n  <queryID>94512</queryID>\r\n
+        \ <queryResultRows>1</queryResultRows>\r\n  <totalRows>1</totalRows>\r\n</ScienceWireQueryIDResponse>"
+    http_version: 
+  recorded_at: Tue, 12 May 2015 23:29:04 GMT
+- request:
+    method: get
+    uri: https://stg.sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery/94512?format=xml&page=0&pageSize=2147483647&v=version/3
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      Accept:
+      - ! '*/*'
+      User-Agent:
+      - Ruby
+      Content-Type:
+      - text/xml
+      Licenseid:
+      - ***REMOVED***
+      Host:
+      - stg.sciencewirerest.discoverylogic.com
+      Connection:
+      - Keep-Alive
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Cache-Control:
+      - private
+      Content-Type:
+      - application/xml; charset=utf-8
+      Server:
+      - Microsoft-IIS/7.5
+      X-Aspnetmvc-Version:
+      - '2.0'
+      X-Aspnet-Version:
+      - 4.0.30319
+      X-Powered-By:
+      - ASP.NET
+      Date:
+      - Tue, 12 May 2015 23:29:04 GMT
+      Content-Length:
+      - '4218'
+    body:
+      encoding: US-ASCII
+      string: ! "<?xml version=\"1.0\"?>\r\n<ArrayOfPublicationItem xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"
+        xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\r\n  <PublicationItem>\r\n
+        \   <PublicationItemID>10340243</PublicationItemID>\r\n    <Title>Convergence
+        and correlations among leaf size and function in seed plants: A comparative
+        test using independent contrasts</Title>\r\n    <Abstract>Prior studies of
+        a broad array of seed plants have reported strong correlations among leaf
+        life span, specific leaf area, nitrogen concentration, and carbon assimilation
+        rates, which have been interpreted as evidence of coordinated leaf physiological
+        strategies. However, it is not known whether these relationships reflect patterns
+        of evolutionary convergence, or whether they are due to contrasting characteristics
+        of major seed plant lineages. We reevaluated a published data set for these
+        seven traits measured in over 100 species, using phylogenetic independent
+        contrasts calculated over a range of alternative seed plant phylogenies derived
+        from recent molecular systematic analyses. In general, pairwise correlations
+        among these seven traits were similar with and without consideration of phylogeny,
+        and results were robust over a range of alternative phylogenies. We also evaluated
+        relationships between these seven traits and lamina area, another important
+        aspect of leaf function, and found moderate correlations with specific leaf
+        area (0.64), mass-based photosynthesis (0.54), area-based nitrogen (-0.56),
+        and leaf life span (-0.42). However, several of these correlations were markedly
+        reduced using independent contrasts; for example, the correlation between
+        leaf life span and lamina area was reduced to close to zero. This change reflects
+        the large differences in both these traits between conifers and angiosperms
+        and the absence of a relationship between the traits within these groups.
+        This analysis illustrates that most interspecific relationships among leaf
+        functional traits, considered across a broad range of seed plant taxa, reflect
+        significant patterns of correlated evolutionary change, lending further support
+        to the adaptive interpretation of these relationships.</Abstract>\r\n    <AuthorList>Ackerly,D,D|Reich,P,B</AuthorList>\r\n
+        \   <AuthorCount>2</AuthorCount>\r\n    <KeywordList>PROGRESS REPORT|DATA
+        SETS|RBCL|PHYLOGENY|LIFE-SPAN|CROWN ARCHITECTURE|SEQUENCE DATA|TROPICAL TREES|CORNERS
+        RULES|TAXONOMIC RELATEDNESS|independent contrasts|specific leaf area|comparative
+        method|photosynthesis|leaf size|leaf life span|seed plants|correlated evolution</KeywordList>\r\n
+        \   <DocumentTypeList>Article</DocumentTypeList>\r\n    <DocumentCategory>Journal
+        Document</DocumentCategory>\r\n    <NumberOfReferences>65</NumberOfReferences>\r\n
+        \   <TimesCited>151</TimesCited>\r\n    <TimesNotSelfCited>133</TimesNotSelfCited>\r\n
+        \   <PMID>10487815</PMID>\r\n    <WoSItemID>000082779300008</WoSItemID>\r\n
+        \   <PublicationSourceTitle>AMERICAN JOURNAL OF BOTANY</PublicationSourceTitle>\r\n
+        \   <Volume>86</Volume>\r\n    <Issue>9</Issue>\r\n    <Pagination>1272-1281</Pagination>\r\n
+        \   <PublicationDate>1999-09-01T00:00:00</PublicationDate>\r\n    <PublicationYear>1999</PublicationYear>\r\n
+        \   <PublicationType>Journal</PublicationType>\r\n    <PublicationSubjectCategoryList>Plant
+        Sciences</PublicationSubjectCategoryList>\r\n    <ISSN>0002-9122</ISSN>\r\n
+        \   <ConferenceStartDate xsi:nil=\"true\" />\r\n    <ConferenceEndDate xsi:nil=\"true\"
+        />\r\n    <Rank xsi:nil=\"true\" />\r\n    <OrdinalRank>0</OrdinalRank>\r\n
+        \   <NormalizedRank xsi:nil=\"true\" />\r\n    <NewPublicationItemID xsi:nil=\"true\"
+        />\r\n    <IsObsolete>false</IsObsolete>\r\n    <CopyrightPublisher>BOTANICAL
+        SOC AMER INC</CopyrightPublisher>\r\n    <CopyrightCity>ST LOUIS</CopyrightCity>\r\n
+        \   <PublicationImpactFactorList>2.383,1999,ExactPublicationYear|2.463,2013,MostRecentYear</PublicationImpactFactorList>\r\n
+        \   <PublicationCategoryRankingList>18/136;PLANT SCIENCES;1999;SC;ExactPublicationYear|52/199;PLANT
+        SCIENCES;2013;SC;MostRecentYear</PublicationCategoryRankingList>\r\n    <AuthorCitationCountList>1,8,143|2,10,141</AuthorCitationCountList>\r\n
+        \   <CopyrightStateProvince>MO</CopyrightStateProvince>\r\n    <CopyrightCountry>UNITED
+        STATES</CopyrightCountry>\r\n  </PublicationItem>\r\n</ArrayOfPublicationItem>"
+    http_version: 
+  recorded_at: Tue, 12 May 2015 23:29:04 GMT
 recorded_with: VCR 2.5.0
