--- a/fixtures/vcr_cassettes/pubmed_harvester_spec_no_filtering_local_only.yml
+++ b/fixtures/vcr_cassettes/pubmed_harvester_spec_no_filtering_local_only.yml
@@ -109,6 +109,113 @@ http_interactions:
   recorded_at: Mon, 27 Apr 2015 21:32:51 GMT
 - request:
     method: post
+    uri: https://stg.sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery?format=xml
+    body:
+      encoding: US-ASCII
+      string: ! "<?xml version=\"1.0\"?>\n      <ScienceWireQueryXMLParameter xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\"
+        xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\">\n      <xmlQuery>&lt;query
+        xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\" xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"&gt;\n\t
+        \           &lt;Criterion ConjunctionOperator=\"AND\"&gt;\n\t              &lt;Criteria&gt;\n\t
+        \               &lt;Criterion&gt;\n\t                  &lt;Filter&gt;\n\t
+        \                   &lt;Column&gt;PMID&lt;/Column&gt;\n\t                    &lt;Operator&gt;In&lt;/Operator&gt;\n\t
+        \                   &lt;Values&gt;&lt;Value&gt;99999999&lt;/Value&gt;&lt;/Values&gt;\n\t
+        \                 &lt;/Filter&gt;\n\t                &lt;/Criterion&gt;\n\t
+        \             &lt;/Criteria&gt;\n\t            &lt;/Criterion&gt;\n\t            &lt;Columns&gt;\n\t
+        \             &lt;SortColumn&gt;\n\t                &lt;Column&gt;Rank&lt;/Column&gt;\n\t
+        \               &lt;Direction&gt;Descending&lt;/Direction&gt;\n\t              &lt;/SortColumn&gt;\n\t
+        \           &lt;/Columns&gt;\n\t            &lt;MaximumRows&gt;1000&lt;/MaximumRows&gt;\n\t
+        \         &lt;/query&gt;</xmlQuery>\n      </ScienceWireQueryXMLParameter>"
+    headers:
+      Accept:
+      - ! '*/*'
+      User-Agent:
+      - Ruby
+      Licenseid:
+      - ***REMOVED***
+      Host:
+      - stg.sciencewirerest.discoverylogic.com
+      Connection:
+      - Keep-Alive
+      Expect:
+      - 100-continue
+      Content-Type:
+      - text/xml
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Cache-Control:
+      - private
+      Content-Type:
+      - application/xml; charset=utf-8
+      Server:
+      - Microsoft-IIS/7.5
+      X-Aspnetmvc-Version:
+      - '2.0'
+      X-Aspnet-Version:
+      - 4.0.30319
+      X-Powered-By:
+      - ASP.NET
+      Date:
+      - Tue, 12 May 2015 23:29:06 GMT
+      Content-Length:
+      - '277'
+    body:
+      encoding: US-ASCII
+      string: ! "<?xml version=\"1.0\"?>\r\n<ScienceWireQueryIDResponse xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"
+        xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\r\n  <queryID>94513</queryID>\r\n
+        \ <queryResultRows>0</queryResultRows>\r\n  <totalRows>0</totalRows>\r\n</ScienceWireQueryIDResponse>"
+    http_version: 
+  recorded_at: Tue, 12 May 2015 23:29:06 GMT
+- request:
+    method: get
+    uri: https://stg.sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery/94513?format=xml&page=0&pageSize=2147483647&v=version/3
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      Accept:
+      - ! '*/*'
+      User-Agent:
+      - Ruby
+      Content-Type:
+      - text/xml
+      Licenseid:
+      - ***REMOVED***
+      Host:
+      - stg.sciencewirerest.discoverylogic.com
+      Connection:
+      - Keep-Alive
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Cache-Control:
+      - private
+      Content-Type:
+      - application/xml; charset=utf-8
+      Server:
+      - Microsoft-IIS/7.5
+      X-Aspnetmvc-Version:
+      - '2.0'
+      X-Aspnet-Version:
+      - 4.0.30319
+      X-Powered-By:
+      - ASP.NET
+      Date:
+      - Tue, 12 May 2015 23:29:06 GMT
+      Content-Length:
+      - '148'
+    body:
+      encoding: US-ASCII
+      string: ! "<?xml version=\"1.0\"?>\r\n<ArrayOfPublicationItem xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"
+        xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\" />"
+    http_version: 
+  recorded_at: Tue, 12 May 2015 23:29:07 GMT
+- request:
+    method: post
     uri: http://eutils.ncbi.nlm.nih.gov/entrez/eutils/efetch.fcgi?db=pubmed&retmode=xml
     body:
       encoding: US-ASCII
@@ -124,7 +231,7 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Mon, 27 Apr 2015 21:32:50 GMT
+      - Tue, 12 May 2015 23:29:07 GMT
       Server:
       - Apache
       Access-Control-Allow-Origin:
@@ -132,12 +239,12 @@ http_interactions:
       Cache-Control:
       - private
       Ncbi-Sid:
-      - 9DFC524D53EAB021_0054SID
+      - 9DFD1B455528CC31_0509SID
       Content-Type:
       - text/xml; charset=UTF-8
       Set-Cookie:
-      - ncbi_sid=9DFC524D53EAB021_0054SID; domain=.nih.gov; path=/; expires=Wed, 27
-        Apr 2016 21:32:50 GMT
+      - ncbi_sid=9DFD1B455528CC31_0509SID; domain=.nih.gov; path=/; expires=Thu, 12
+        May 2016 23:29:07 GMT
       X-Ua-Compatible:
       - IE=Edge
       Transfer-Encoding:
@@ -155,5 +262,5 @@ http_interactions:
 
 '
     http_version: 
-  recorded_at: Mon, 27 Apr 2015 21:32:52 GMT
+  recorded_at: Tue, 12 May 2015 23:29:07 GMT
 recorded_with: VCR 2.5.0
