--- a/fixtures/vcr_cassettes/sciencewire_client_spec_returns_suggestions_for_email.yml
+++ b/fixtures/vcr_cassettes/sciencewire_client_spec_returns_suggestions_for_email.yml
@@ -9,10 +9,10 @@ http_interactions:
         xmlns:xsd='http://www.w3.org/2001/XMLSchema'>\n        <Authors>\n          <Author>\n
         \           <LastName>edler</LastName>\n            <FirstName>alice</FirstName>\n
         \           <MiddleName></MiddleName>\n            <City>Stanford</City>\n
-        \           <State>CA</State>\n            <Country>USA</Country>\n            <Emails>\n
-        \                   <string>alice.edler@stanford.edu</string>\n                  </Emails>\n
-        \           <Version>1</Version>\n         </Author>\n      </Authors>\n      <DocumentCategory>Journal
-        Document</DocumentCategory><PublicationItemIds><int>5199247</int><int>7877232</int><int>844542</int><int>1178390</int><int>29434219</int><int>30072480</int><int>30502634</int><int>46558063</int><int>31222988</int></PublicationItemIds><LimitToHighQualityMatchesOnly>true</LimitToHighQualityMatchesOnly></PublicationAuthorMatchParameters>"
+        \           <State>CA</State>\n            <Country>USA</Country>\n            <Version>1</Version>\n
+        \        </Author>\n      </Authors>\n      <DocumentCategory>Journal Document</DocumentCategory>\n
+        \     <Emails>\n                  <string>alice.edler@stanford.edu</string>\n
+        \               </Emails><PublicationItemIds><int>5199247</int><int>7877232</int><int>844542</int><int>1178390</int><int>29434219</int><int>30072480</int><int>30502634</int><int>46558063</int><int>31222988</int></PublicationItemIds><LimitToHighQualityMatchesOnly>true</LimitToHighQualityMatchesOnly></PublicationAuthorMatchParameters>"
     headers:
       Accept:
       - ! '*/*'
@@ -46,21 +46,23 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Mon, 27 Apr 2015 22:23:22 GMT
+      - Tue, 12 May 2015 23:30:04 GMT
       Content-Length:
-      - '700'
+      - '872'
     body:
       encoding: US-ASCII
       string: ! "<?xml version=\"1.0\"?>\r\n<ArrayOfItemMatchResult xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"
         xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\r\n  <ItemMatchResult>\r\n
-        \   <MatchRank>1</MatchRank>\r\n    <PublicationItemID>29187981</PublicationItemID>\r\n
-        \   <MatchScore>0.99026316404342651</MatchScore>\r\n  </ItemMatchResult>\r\n
-        \ <ItemMatchResult>\r\n    <MatchRank>2</MatchRank>\r\n    <PublicationItemID>46795732</PublicationItemID>\r\n
-        \   <MatchScore>0.5180131196975708</MatchScore>\r\n  </ItemMatchResult>\r\n
-        \ <ItemMatchResult>\r\n    <MatchRank>3</MatchRank>\r\n    <PublicationItemID>47593787</PublicationItemID>\r\n
-        \   <MatchScore>0.49637672305107117</MatchScore>\r\n  </ItemMatchResult>\r\n</ArrayOfItemMatchResult>"
+        \   <MatchRank>1</MatchRank>\r\n    <PublicationItemID>29352378</PublicationItemID>\r\n
+        \   <MatchScore>1.2708333730697632</MatchScore>\r\n  </ItemMatchResult>\r\n
+        \ <ItemMatchResult>\r\n    <MatchRank>2</MatchRank>\r\n    <PublicationItemID>29187981</PublicationItemID>\r\n
+        \   <MatchScore>0.990359365940094</MatchScore>\r\n  </ItemMatchResult>\r\n
+        \ <ItemMatchResult>\r\n    <MatchRank>3</MatchRank>\r\n    <PublicationItemID>46795732</PublicationItemID>\r\n
+        \   <MatchScore>0.51730084419250488</MatchScore>\r\n  </ItemMatchResult>\r\n
+        \ <ItemMatchResult>\r\n    <MatchRank>4</MatchRank>\r\n    <PublicationItemID>47593787</PublicationItemID>\r\n
+        \   <MatchScore>0.496509313583374</MatchScore>\r\n  </ItemMatchResult>\r\n</ArrayOfItemMatchResult>"
     http_version: 
-  recorded_at: Mon, 27 Apr 2015 22:23:23 GMT
+  recorded_at: Tue, 12 May 2015 23:30:04 GMT
 - request:
     method: post
     uri: https://stg.sciencewirerest.discoverylogic.com/PublicationCatalog/MatchedPublicationItemIdsForAuthor?format=xml
@@ -70,10 +72,10 @@ http_interactions:
         xmlns:xsd='http://www.w3.org/2001/XMLSchema'>\n        <Authors>\n          <Author>\n
         \           <LastName>edler</LastName>\n            <FirstName>alice</FirstName>\n
         \           <MiddleName></MiddleName>\n            <City>Stanford</City>\n
-        \           <State>CA</State>\n            <Country>USA</Country>\n            <Emails>\n
-        \                   <string>alice.edler@stanford.edu</string>\n                  </Emails>\n
-        \           <Version>1</Version>\n         </Author>\n      </Authors>\n      <DocumentCategory>Conference
-        Proceeding Document</DocumentCategory><PublicationItemIds><int>5199247</int><int>7877232</int><int>844542</int><int>1178390</int><int>29434219</int><int>30072480</int><int>30502634</int><int>46558063</int><int>31222988</int></PublicationItemIds><LimitToHighQualityMatchesOnly>true</LimitToHighQualityMatchesOnly></PublicationAuthorMatchParameters>"
+        \           <State>CA</State>\n            <Country>USA</Country>\n            <Version>1</Version>\n
+        \        </Author>\n      </Authors>\n      <DocumentCategory>Conference Proceeding
+        Document</DocumentCategory>\n      <Emails>\n                  <string>alice.edler@stanford.edu</string>\n
+        \               </Emails><PublicationItemIds><int>5199247</int><int>7877232</int><int>844542</int><int>1178390</int><int>29434219</int><int>30072480</int><int>30502634</int><int>46558063</int><int>31222988</int></PublicationItemIds><LimitToHighQualityMatchesOnly>true</LimitToHighQualityMatchesOnly></PublicationAuthorMatchParameters>"
     headers:
       Accept:
       - ! '*/*'
@@ -107,7 +109,7 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Mon, 27 Apr 2015 22:23:22 GMT
+      - Tue, 12 May 2015 23:30:04 GMT
       Content-Length:
       - '349'
     body:
@@ -115,7 +117,7 @@ http_interactions:
       string: ! "<?xml version=\"1.0\"?>\r\n<ArrayOfItemMatchResult xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"
         xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\r\n  <ItemMatchResult>\r\n
         \   <MatchRank>1</MatchRank>\r\n    <PublicationItemID>10389828</PublicationItemID>\r\n
-        \   <MatchScore>0.34684008359909058</MatchScore>\r\n  </ItemMatchResult>\r\n</ArrayOfItemMatchResult>"
+        \   <MatchScore>0.34722322225570679</MatchScore>\r\n  </ItemMatchResult>\r\n</ArrayOfItemMatchResult>"
     http_version: 
-  recorded_at: Mon, 27 Apr 2015 22:23:23 GMT
+  recorded_at: Tue, 12 May 2015 23:30:05 GMT
 recorded_with: VCR 2.5.0
