--- a/fixtures/vcr_cassettes/sourcelookup_spec_doi_local_manual_found.yml
+++ b/fixtures/vcr_cassettes/sourcelookup_spec_doi_local_manual_found.yml
@@ -144,4 +144,148 @@ http_interactions:
         STATES</CopyrightCountry>\r\n  </PublicationItem>\r\n</ArrayOfPublicationItem>"
     http_version: 
   recorded_at: Mon, 27 Apr 2015 21:33:04 GMT
+- request:
+    method: post
+    uri: https://stg.sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery?format=xml
+    body:
+      encoding: US-ASCII
+      string: ! "<?xml version=\"1.0\"?>\n      <ScienceWireQueryXMLParameter xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\"
+        xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\">\n      <xmlQuery>      <![CDATA[\n
+        \     <query xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\" xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\">\n
+        \         <Criterion>\n              <Criteria>\n                  <Criterion>\n
+        \                     <Filter>\n                          <Column>DOI</Column>\n
+        \                         <Operator>Equals</Operator>\n                          <Value>10.1016/j.mcn.2012.03.008</Value>\n
+        \                     </Filter>\n                  </Criterion>\n              </Criteria>\n
+        \         </Criterion>\n          <MaximumRows>200</MaximumRows>\n      </query>\n
+        \     ]]>\n</xmlQuery>\n      </ScienceWireQueryXMLParameter>"
+    headers:
+      Accept:
+      - ! '*/*'
+      User-Agent:
+      - Ruby
+      Licenseid:
+      - ***REMOVED***
+      Host:
+      - stg.sciencewirerest.discoverylogic.com
+      Connection:
+      - Keep-Alive
+      Expect:
+      - 100-continue
+      Content-Type:
+      - text/xml
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Cache-Control:
+      - private
+      Content-Type:
+      - application/xml; charset=utf-8
+      Server:
+      - Microsoft-IIS/7.5
+      X-Aspnetmvc-Version:
+      - '2.0'
+      X-Aspnet-Version:
+      - 4.0.30319
+      X-Powered-By:
+      - ASP.NET
+      Date:
+      - Tue, 12 May 2015 23:31:20 GMT
+      Content-Length:
+      - '277'
+    body:
+      encoding: US-ASCII
+      string: ! "<?xml version=\"1.0\"?>\r\n<ScienceWireQueryIDResponse xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"
+        xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\r\n  <queryID>94517</queryID>\r\n
+        \ <queryResultRows>1</queryResultRows>\r\n  <totalRows>1</totalRows>\r\n</ScienceWireQueryIDResponse>"
+    http_version: 
+  recorded_at: Tue, 12 May 2015 23:31:20 GMT
+- request:
+    method: get
+    uri: https://stg.sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery/94517?format=xml&page=0&pageSize=2147483647&v=version/3
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      Accept:
+      - ! '*/*'
+      User-Agent:
+      - Ruby
+      Content-Type:
+      - text/xml
+      Licenseid:
+      - ***REMOVED***
+      Host:
+      - stg.sciencewirerest.discoverylogic.com
+      Connection:
+      - Keep-Alive
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Cache-Control:
+      - private
+      Content-Type:
+      - application/xml; charset=utf-8
+      Server:
+      - Microsoft-IIS/7.5
+      X-Aspnetmvc-Version:
+      - '2.0'
+      X-Aspnet-Version:
+      - 4.0.30319
+      X-Powered-By:
+      - ASP.NET
+      Date:
+      - Tue, 12 May 2015 23:31:20 GMT
+      Content-Length:
+      - '3701'
+    body:
+      encoding: US-ASCII
+      string: ! "<?xml version=\"1.0\"?>\r\n<ArrayOfPublicationItem xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"
+        xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\r\n  <PublicationItem>\r\n
+        \   <PublicationItemID>60830932</PublicationItemID>\r\n    <Title>Protein
+        kinase C alpha and integrin-linked kinase mediate the negative axon guidance
+        effects of Sonic hedgehog</Title>\r\n    <Abstract>In addition to its role
+        as a morphogen, Sonic hedgehog (Shh) has also been shown to function as a
+        guidance factor that directly acts on the growth cones of various types of
+        axons. However, the noncanonical signaling pathways that mediate the guidance
+        effects of Shh protein remain poorly understood. We demonstrate that a novel
+        signaling pathway consisting of protein kinase C alpha (PKC alpha) and integrin-linked
+        kinase (ILK) mediates the negative guidance effects of high concentration
+        of Shh on retinal ganglion cell (RGC) axons. Shh rapidly increased Ca2+ level
+        and activated PKC alpha and ILK in the growth cones of RGC axons. By in vitro
+        kinase assay, PKC alpha was found to directly phosphorylate ILK on threonine-173
+        and -181. Inhibition of PKC alpha or expression of a mutant ILK with the PKC
+        alpha phosphorylation sites mutated (ILK-DM), abolished the Shh-induced macropinocytosis,
+        growth cone collapse and repulsive axon turning. In vivo, expression of a
+        dominant negative PKC alpha or ILK-DM disrupted RGC axon pathfinding at the
+        optic chiasm but not the projection toward the optic disk, supporting that
+        this signaling pathway plays a specific role in Shh-mediated negative guidance
+        effects. (c) 2012 Elsevier Inc. All rights reserved.</Abstract>\r\n    <AuthorList>Guo,Daorong,|Standley,Clive,|Bellve,Karl,|Fogarty,Kevin,|Bao,Zheng-Zheng,</AuthorList>\r\n
+        \   <AuthorCount>5</AuthorCount>\r\n    <KeywordList>SELECTIVE-INHIBITION|NERVE
+        GROWTH|STRUCTURAL BASIS|ILK|NEURITE OUTGROWTH|GROWTH CONE GUIDANCE|GANGLION-CELL
+        AXONS|PKC-DELTA|ACTIVATION|MOUSE OPTIC CHIASM|Shh|axon guidance|ILK|PKC alpha</KeywordList>\r\n
+        \   <DocumentTypeList>Article</DocumentTypeList>\r\n    <DocumentCategory>Journal
+        Document</DocumentCategory>\r\n    <NumberOfReferences>63</NumberOfReferences>\r\n
+        \   <TimesCited>9</TimesCited>\r\n    <TimesNotSelfCited>9</TimesNotSelfCited>\r\n
+        \   <PMID>22521536</PMID>\r\n    <WoSItemID>000305547700008</WoSItemID>\r\n
+        \   <PublicationSourceTitle>MOLECULAR AND CELLULAR NEUROSCIENCE</PublicationSourceTitle>\r\n
+        \   <Volume>50</Volume>\r\n    <Issue>1</Issue>\r\n    <Pagination>82-92</Pagination>\r\n
+        \   <PublicationDate>2012-05-01T00:00:00</PublicationDate>\r\n    <PublicationYear>2012</PublicationYear>\r\n
+        \   <PublicationType>Journal</PublicationType>\r\n    <PublicationSubjectCategoryList>Neurosciences</PublicationSubjectCategoryList>\r\n
+        \   <ISSN>1044-7431</ISSN>\r\n    <DOI>10.1016/j.mcn.2012.03.008</DOI>\r\n
+        \   <ConferenceStartDate xsi:nil=\"true\" />\r\n    <ConferenceEndDate xsi:nil=\"true\"
+        />\r\n    <Rank xsi:nil=\"true\" />\r\n    <OrdinalRank>0</OrdinalRank>\r\n
+        \   <NormalizedRank xsi:nil=\"true\" />\r\n    <NewPublicationItemID xsi:nil=\"true\"
+        />\r\n    <IsObsolete>false</IsObsolete>\r\n    <CopyrightPublisher>ACADEMIC
+        PRESS INC ELSEVIER SCIENCE</CopyrightPublisher>\r\n    <CopyrightCity>SAN
+        DIEGO</CopyrightCity>\r\n    <PublicationImpactFactorList>3.837,2012,ExactPublicationYear|3.734,2013,MostRecentYear</PublicationImpactFactorList>\r\n
+        \   <PublicationCategoryRankingList>74/252;NEUROSCIENCES;2012;SC;ExactPublicationYear|82/252;NEUROSCIENCES;2013;SC;MostRecentYear</PublicationCategoryRankingList>\r\n
+        \   <AuthorCitationCountList>1,0,9|2,0,9|3,0,9|4,0,9|5,0,9</AuthorCitationCountList>\r\n
+        \   <CopyrightStateProvince>CA</CopyrightStateProvince>\r\n    <CopyrightCountry>UNITED
+        STATES</CopyrightCountry>\r\n  </PublicationItem>\r\n</ArrayOfPublicationItem>"
+    http_version: 
+  recorded_at: Tue, 12 May 2015 23:31:20 GMT
 recorded_with: VCR 2.5.0
